Bug 385214 - Color scheme setting broken for QtWayland XdgShellV6 windows
Summary: Color scheme setting broken for QtWayland XdgShellV6 windows
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-29 19:58 UTC by Martin Flöser
Modified: 2018-01-04 18:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
mgraesslin: Wayland+
mgraesslin: X11-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Flöser 2017-09-29 19:58:42 UTC
Due to https://bugreports.qt.io/browse/QTBUG-63521 passing the color scheme from PlasmaIntegration to KWin does not work any more. QtWayland does not use the extendedSurface for XdgShellV6.
Comment 1 David Edmundson 2017-09-29 22:28:54 UTC
Meh.

FWIW, if we need a temporary workaround there's an env we can put into startplasma to force Qt apps into using WL-shell. 

But there's also a code review removing it completely; https://codereview.qt-project.org/#/c/197506/

Given we have 3 months to fix it anyway, we may as well add the two tiny custom protocols for these things; it's the more correct approach anyway.
Comment 2 Martin Flöser 2017-09-30 08:17:59 UTC
> Given we have 3 months to fix it anyway, we may as well add the two tiny custom protocols for these things; it's the more correct approach anyway.

I agree. That's also what I was thinking yesterday when noticing it. I reported the bug against Qt more as a "just for the record".
Comment 3 David Edmundson 2018-01-04 18:32:33 UTC
Git commit 01d6878dc2d31b1515d0f89b0c85eafc0cc77e26 by David Edmundson.
Committed on 04/01/2018 at 18:32.
Pushed by davidedmundson into branch 'master'.

Add explicit protocol for colour scheme management

Summary:
To replace the deprecated/broken qt extended surface

Test Plan: Ran test in plasma-integration

Reviewers: #plasma, graesslin

Reviewed By: #plasma, graesslin

Subscribers: plasma-devel, kwin, #kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D9660

M  +20   -9    shell_client.cpp
M  +3    -0    shell_client.h
M  +13   -0    wayland_server.cpp
M  +2    -0    wayland_server.h

https://commits.kde.org/kwin/01d6878dc2d31b1515d0f89b0c85eafc0cc77e26